Create a finch trial to always accelerate canvases.

Currently there's a lot of logic dictating whether
canvases use CPU ram or VRAM (non-accelerated or
accelerated). With new perf tests and UMA metrics we
can now experimentally test which is better. A doc
with data and more detail can be found here:
https://docs.google.com/document/d/11Xsse3Z-EBv5B-_tYfPEzh3qUW9CuTiHO4pJTz78TfA/edit#

With the flag a bunch of layout tests fail due to
anti-aliasing differences.

Bug: 909937
Change-Id: I18f89564f5c7dfffbe65bd896e6f4f52fa326873
Reviewed-on: https://chromium-review.googlesource.com/c/1371937
Reviewed-by: Kentaro Hara <haraken@chromium.org>
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Aaron Krajeski <aaronhk@chromium.org>
Cr-Commit-Position: refs/heads/master@{#620724}
Former-commit-id: f2f827d422c1e0ff6b26717f1afecd1bd44266fc