third_party/blink/public/common/features.h
@@ -53,6 +53,7 @@ BLINK_COMMON_EXPORT extern const char
     kMixedContentAutoupgradeModeOptionallyBlockable[];
 
 BLINK_COMMON_EXPORT extern const base::Feature kDecodeLossyWebPImagesToYUV;
+BLINK_COMMON_EXPORT extern const base::Feature kAlwaysAccelerateCanvas;
 
 }  // namespace features
 }  // namespace blink
